# LiteGhidraMCP

./: .gitignore  CLAUDE.md  MIGRATION_TO_SSH.md  README.md  README_EN.md  README_ZH.md  docker_only_ghidra_mcp_server.py  ghidra_mcp_server.py  ghidra_mcp_server_pyghidra.py  mcp_stdio.py  pyproject.toml  requirements.txt  test_script.py
api/: __init__.py  basic_info.py  checkout.py  comment.py  datatype.py  demo.py  memory.py  program.py  rename.py  search.py  status.py  symbol_tree.py  version.py  view.py
api_v1/: __init__.py  edit.py  list.py  overview.py  search.py  view.py
apis/: __init__.py
cli/: config.py  docker.py  main.py  output.py  ports.py
config/: .env.example
docker/: .dockerignore  .env  .env.auto-server.example  .env.client.example  .env.example  .env.server.example  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.pyghidra  ISSUES.md  MIGRATION.md  Makefile  QUICKSTART.md  QUICKSTART.pyghidra.md  docker-compose.client.yml  docker-compose.dev.yml  docker-compose.pyghidra.dev.yml  docker-compose.pyghidra.yml  docker-compose.server.yml  docker-compose.with-server.yml  docker-compose.yml  entrypoint.pyghidra.sh  entrypoint.sh  healthcheck.sh  init-ghidra-server.sh  server.conf  troubleshoot.sh  verify-setup.sh
docs/: DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DOCKER_MIGRATION.md  HEADLESS_SERVER_AUTH.md  SKILL.md  SSH_KEY_AUTHENTICATION.md  SSH_KEY_TESTING.md
mcp_apis/: common.py  status_api.py
mcp_v1/: __init__.py  server.py
scripts/: admin_bootstrap.py  exec_runner.py  exec_runner_template.java  mcp_sse_proxy.py  mcp_stdio.py  test_mcp.py  (+1 more)
(+34 files in other folders)
